--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<html>
+    <body>
+        <div style="display:grid; grid-template-columns: 20% 40% 20%;">
+            <div style='grid-column: 1;'></div>
+            <div style='grid-column: 2;'> Hello World!</div>
+            <div style='grid-column: 3;'></div>
+        </div>
+        
+    </body>
+</html>
