--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <head></head>
     <body>
         <div style="display:grid; grid-template-columns: 20% 40% 20%;">
             <div style='grid-column: 1;'></div>
