--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         <div style="display:grid; grid-template-columns: 30% 40% 30%;">
             <div style='grid-column: 1;'></div>
-            <div style='grid-column: 2;'>Hello World!</div>
+            <div style='grid-column: 2; place-self:center'>Hello World!</div>
             <div style='grid-column: 3;'></div>
         </div>
     </body>
