--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="design.css">
+    </head>
     <body>
-        <div style="display:grid; grid-template-columns: 30% 40% 30%;">
-            <div style='grid-column: 1;'></div>
-            <div style='grid-column: 2; place-self:center'>Hello World!</div>
-            <div style='grid-column: 3;'></div>
-        </div>
+        <div class="header">Hello World!</div>
     </body>
 </html>
