--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
     <head>
         <link rel="stylesheet" href="design.css">
     </head>
-    
+
     <body>
-        <div class="header">
+        <div class="header" style="grid-row:1">
             <a href="/science/" style="grid-column:2">Science</a>
             <a href="/blog/" style="grid-column:3">Blog</a>
             <a href="/recommendations/" style="grid-column:4">Recommendations</a>
         </div>
+
+        <div class="footer" style="grid-row:3"></div>
     </body>
 </html>
