--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <body>
         <div class="header" style="grid-row:1">
-            <a href="/science/" style="grid-column:2">Science</a>
-            <a href="/blog/" style="grid-column:3">Blog</a>
-            <a href="/recommendations/" style="grid-column:4">Recommendations</a>
+            <a class="button" href="/science/" style="grid-column:2">SCIENCE</a>
+            <a class="button" href="/blog/" style="grid-column:3">BLOG</a>
+            <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
         </div>
 
         <div class="footer" style="grid-row:3"></div>
