--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="design.css">
+        <script src="https://kit.fontawesome.com/9eb3895d1d.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -10,6 +11,22 @@
             <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
         </div>
 
-        <div class="footer" style="grid-row:3"></div>
+        <div>
+            Follow me!
+            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-column:5">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-column:5">
+                <i class="fab fa-instagram-square"></i>
+            </a>
+            <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-column:5">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-column:5">
+                <i class="fab fa-github-square"></i>
+            </a>
+        </div>
+
+        <div class="footer" style="grid-row:-1"></div>
     </body>
 </html>
