update social media links

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
             <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
         </div>
 
-        <div>
+        <div class="content" style="grid-column:2">
             Follow me!
-            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-column:5">
+            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:1">
                 <i class="fab fa-twitter-square"></i>
             </a>
-            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-column:5">
+            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-instagram-square"></i>
             </a>
-            <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-column:5">
+            <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-row:3">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-column:5">
+            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:4">
                 <i class="fab fa-github-square"></i>
             </a>
         </div>
 
-        <div class="footer" style="grid-row:-1"></div>
+        <div class="footer" style="grid-row:end"></div>
     </body>
 </html>
