--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
         </div>
 
+        <div>
         <div class="content" style="grid-column:2">
             Follow me!
             <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:1">
@@ -26,7 +27,7 @@
                 <i class="fab fa-github-square"></i>
             </a>
         </div>
-
+    </div>
         <div class="footer" style="grid-row:end"></div>
     </body>
 </html>
