--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
             <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
         </div>
 
-        <div>
-        <div class="content" style="grid-column:2">
+        <div class="content">
             Follow me!
             <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:1">
-                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-twitter"></i>
             </a>
             <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-row:2">
-                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-instagram"></i>
             </a>
             <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-row:3">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:4">
-                <i class="fab fa-github-square"></i>
+                <i class="fab fa-github"></i>
             </a>
         </div>
-    </div>
         <div class="footer" style="grid-row:end"></div>
     </body>
 </html>
