--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
         </div>
 
         <div class="content">
-            Follow me!
-            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:1">
+            <div class="socialMediaBoard" style="grid-column:-1;grid-row:1">
+            <div style="grid-row:1">Follow Me!</div>
+            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-row:2">
+            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-row:3">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-row:3">
+            <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-row:4">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:4">
+            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:5">
                 <i class="fab fa-github"></i>
             </a>
+            </div>  
         </div>
         <div class="footer" style="grid-row:end"></div>
     </body>
