--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:5">
                 <i class="fab fa-github"></i>
             </a>
+            <a class="socialMediaLink" href="www.steamcommunity.com/id/h1light" style="grid-row:6">
+                <i class="fab fa-steam"></i>
+            </a>
             </div>  
         </div>
         <div class="footer" style="grid-row:end"></div>
