--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
         <div class="content">
             <div class="socialMediaBoard" style="grid-column:-2;grid-row:1">
             <div style="grid-row:1">Follow Me!</div>
-            <a class="socialMediaLink" href="www.twitter.com/finnwe97" style="grid-row:2">
+            <a class="socialMediaLink" href="https://www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a class="socialMediaLink" href="www.instagram.com/finnwe97" style="grid-row:3">
+            <a class="socialMediaLink" href="https://www.instagram.com/finnwe97" style="grid-row:3">
                 <i class="fab fa-instagram"></i>
             </a>
             <a class="socialMediaLink" href="https://de.linkedin.com/in/finn-welzm%C3%BCller-aa11351b6" style="grid-row:4">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a class="socialMediaLink" href="www.github.com/FinnWelzmueller" style="grid-row:5">
+            <a class="socialMediaLink" href="https://www.github.com/FinnWelzmueller" style="grid-row:5">
                 <i class="fab fa-github"></i>
             </a>
-            <a class="socialMediaLink" href="www.steamcommunity.com/id/h1light" style="grid-row:6">
+            <a class="socialMediaLink" href="https://www.steamcommunity.com/id/h1light" style="grid-row:6">
                 <i class="fab fa-steam"></i>
+            </a>
+            <a class="socialMediaLink" href="https://lichess.org/@/finnwe97" style="grid-row:7">
+                <i class="fas fa-chess-knight"></i>
             </a>
             </div>  
         </div>
