--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
     <body>
         <div class="header" style="grid-row:1">
-            <a class="button" href="/science/" style="grid-column:2">SCIENCE</a>
-            <a class="button" href="/blog/" style="grid-column:3">BLOG</a>
-            <a class="button" href="/recommendations/" style="grid-column:4">RECOMMENDATIONS</a>
+            <a class="button" href="/science/" style="grid-column:2"><i class="fas fa-book"></i>SCIENCE</a>
+            <a class="button" href="/blog/" style="grid-column:3"><i class="fas fa-newspaper"></i>BLOG</a>
+            <a class="button" href="/recommendations/" style="grid-column:4"><i class="fas fa-thumbtack"></i>RECOMMENDATIONS</a>
         </div>
 
         <div class="content">
             <div class="socialMediaBoard" style="grid-column:-2;grid-row:1">
-            <div style="grid-row:1; font-size: 20px; color:mediumseagreen; font-family: copperplate, fantasy, sans-serif; font-weight:fat">Connect!</div>
+            <div style="grid-row:1; font-size: 20px; color:mediumseagreen; font-family: copperplate, fantasy, sans-serif; font-weight:fat">CONNECT!</div>
             <a class="socialMediaLink" href="https://www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
             </a>
