--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             <a class="socialMediaLink" href="https://lichess.org/@/finnwe97" style="grid-row:7">
                 <i class="fas fa-chess-knight"></i>
             </a>
+
+            <a class="socialMediaLink" style="grid-row:8">
+                <i class="fas fa-envelope">
+                    <input type="text" value="Hello World" id="myInput">
+                </i>
+            </a>
             </div>  
         </div>
         <div class="footer" style="grid-row:end"></div>
