--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="content">
             <div class="socialMediaBoard" style="grid-column:-2;grid-row:1">
-            <div style="grid-row:1; font-size: 20px; color:mediumseagreen; font-family: copperplate, fantasy, sans-serif; font-weight:fat">CONNECT!</div>
+            <div style="grid-row:1; font-size: 20px; color:royalblue; font-family: copperplate, fantasy, sans-serif; font-weight:fat">CONNECT!</div>
             <a class="socialMediaLink" href="https://www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
             </a>
@@ -35,7 +35,6 @@
 
             <a class="socialMediaLink" style="grid-row:8">
                 <i class="fas fa-envelope">
-                    <input type="text" value="Hello World" id="myInput">
                 </i>
             </a>
             </div>  
