--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 <i class="fas fa-chess-knight"></i>
             </a>
 
-            <a class="socialMediaLink" style="grid-row:8">
+            <a class="socialMediaLink" href="https://open.spotify.com/user/11168906200?si=2e5b951c71e84056" style="grid-row:8">
+                <i class="fab fa-spotify"></i>
+            </a>
+
+            <a class="socialMediaLink" style="grid-row:9">
                 <i class="fas fa-envelope">
                 </i>
             </a>
