changed navbar color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <div class="header" style="grid-row:1">
+        <div class="navbar" style="grid-row:1">
             <a class="button" href="/science/" style="grid-column:2"><i class="fas fa-book"></i>SCIENCE</a>
             <a class="button" href="/blog/" style="grid-column:3"><i class="fas fa-newspaper"></i>BLOG</a>
             <a class="button" href="/recommendations/" style="grid-column:4"><i class="fas fa-thumbtack"></i>RECOMMENDATIONS</a>
