--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="content">
-            <div class="socialMediaBoard" style="grid-column:-2;grid-row:1;"></div>>
+            <div class="socialMediaBoard" style="grid-column:-2;grid-row:1;"></div>
             <div style="grid-row:1; font-size: 20px; color:royalblue; font-family: copperplate, fantasy, sans-serif; font-weight:fat">CONNECT!</div>
             <a class="socialMediaLink" href="https://www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
