added item-grow for social media links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="socialMediaBoard" style="grid-column:-1;grid-row:1;"></div>
             <div style="grid-row:1; font-size: 20px; color:royalblue; font-family: copperplate, fantasy, sans-serif; font-weight:fat">CONNECT!</div>
-            <a class="socialMediaLink" href="https://www.twitter.com/finnwe97" style="grid-row:2">
+            <a class="socialMediaLink; grow" href="https://www.twitter.com/finnwe97" style="grid-row:2">
                 <i class="fab fa-twitter"></i>
             </a>
             <a class="socialMediaLink" href="https://www.instagram.com/finnwe97" style="grid-row:3">
